# llm-consensus

./: .gitignore  .graphifyignore  LICENSE  README.md  env.example.md  package-lock.json  package.json  pyrightconfig.json  render.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml
apps/api/backend/: auth.py  council.py  main.py  openrouter.py  settings.py
apps/api/tests/: conftest.py  test_main.py
apps/web/: .env.example  drizzle-kit.d.ts  drizzle.config.ts  next.config.ts  package.json  proxy.ts
apps/web/app/: error.tsx  globals.css  layout.tsx
apps/web/app/(app)/: error.tsx  layout.tsx  page.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/components/: error-boundary.tsx  logo.tsx
apps/web/components/chat/: assistant-message.tsx  chat-interface.tsx  copy-button.tsx  copy-menu-button.tsx  home-page-client.tsx  message-input.tsx  message-list.tsx  scroll-to-bottom.tsx  user-message.tsx  voice-input.tsx  welcome-screen.tsx
apps/web/components/command-palette/: command-palette.tsx
apps/web/components/council/: mode-config-dialog.tsx  model-picker.tsx  preset-selector.tsx  presets.ts  stage-1.tsx  stage-2.tsx  stage-3.tsx  stage-loading.tsx
apps/web/components/layout/: app-header.tsx  (+8 more)
apps/web/lib/: env.ts  ratelimit.ts  shortcut-labels.ts
apps/web/trpc/: client.tsx  init.ts  query-client.ts  react.tsx  server.tsx
supabase/migrations/: 0001_initial_schema.sql  0002_rls_policies.sql  0003_triggers.sql  0004_security_fixes.sql  0005_add_username.sql  0006_add_is_starred.sql  0007_revoke_internal_function_execute.sql
(+36 files in other folders)
